fixed visual bug with alignment of imgs section of item id page

--- a/frontend/styles/pages/Item.module.scss
+++ b/frontend/styles/pages/Item.module.scss
@@ -47,10 +47,8 @@
   &__imgs--format {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
 
-    img {
+    & > img {
       margin-right: 25px;
       margin-bottom: 25px;
       border-radius: 5px;
